--- a/src/02.01.Ranksvs.density.Rmd
+++ b/src/02.01.Ranksvs.density.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Ranks vs. Bird Density"
+title: title: "Bird Density vs. Ranks & Forest Attributes - SAMPLED STANDS" 
 author: "Nicole Barker"
 date: "Last updated: Jan 3, 2018"
 output: 
@@ -10,7 +10,7 @@ output:
 ##Script Abstract
 
 
-# Question: How well do ranks predict observed bird density?
+# Question 1: How well do ranks predict observed bird density? 
 
 ## Approach 1. Descriptive plots of density vs. ranks
 
@@ -22,11 +22,15 @@ output:
     * Forest stand type as predictor
     * Count as response variable
     * TOTA offset as offset 
-* Data subset: Those stand types that were sampled by at least one bird point count survey.
+* **Data subset: Those stand types that were sampled by at least one bird point count survey** 
 
 
 
 ## Approach 2. Quantitatively analyze relationship between density (count with offset) and Rank
+
+
+
+# Question 2: How does bird density relate to forest attributes?  
 
 
 ``` {r setup, echo=F, message=F, warning=F}
@@ -107,6 +111,18 @@ colnames(tota)[which(colnames(tota) == "sumABUND")] <- "Count"
 
 * This keeps a total of `r length(unique(tota$SS))` locations, each with `r length(unique(tota$PKEY)) / length(unique(tota$SS))` PKEY. (should be 1. I haven't removed all duplicates if this number is > 1)
 
+#### Add factor labels 
+``` {r} 
+tota$BecZone <- factor(tota$BecZone) 
+tota$BecZone <- factor(tota$BecZone, levels=levels(tota$BecZone), labels=c("BG/PP", "BWBS", "ESSF", "ICH/MH", "IDF", "MS", "SBS/SBPS", "SWB")) 
+tota$SpeciesGroup <- factor(tota$SpeciesGroup) 
+tota$Age <- factor(tota$Age) 
+tota$Age <- factor(tota$Age, levels=levels(tota$Age)[c(3,4,5,1,2)], labels=c("3-30 yrs", "31-80 yrs", "81-120 yrs", "121-250 yrs", ">250 yrs")) 
+tota$Height <- factor(tota$Height) 
+levels(tota$Height) <- c("<10.5 m", "10.5-19.4 m", "19.5-28.4 m", "> 28.5 m") 
+``` 
+ 
+
 ## Approach 1. Descriptive plots of density vs. ranks
 
 ``` {r}
@@ -169,8 +185,19 @@ Only predicts to the forest stands we sampled. `r length(unique(tota$ForID))` un
 Basically just takes the mean of all samples within a forest stand type and adjusts by the offset. No covariates in the above model.
 
 ``` {r glm.forid.pred, eval=T}
-tota$Pred_fit.dens.forid_tot_pois <- predict(fit.dens.forid_tot_pois, newdata=tota, type="response")
-kable(tota[1:10,c("PKEY", "ForID", "Pred_fit.dens.forid_tot_pois", "Offset")])
+dat.predict <- data.frame(ForID=unique(tota$ForID)) 
+dat.predict$Offset <- 0 
+dat.predict$Pred_fit.dens.forid_tot_pois <- predict(fit.dens.forid_tot_pois, newdata=dat.predict, type="response") 
+kable(dat.predict[1:10,c("ForID", "Pred_fit.dens.forid_tot_pois", "Offset")]) 
+tota <- merge(tota, dat.predict[c("ForID", "Pred_fit.dens.forid_tot_pois")], by="ForID", all.x=T) 
+``` 
+ 
+Since my GLM was intercept-less and ForID is the single covariate, exp(coef) are the group means. 
+ 
+``` {r eval=T} 
+coefs.forid <- data.frame(exp(coef(fit.dens.forid_tot_pois))) 
+coefs.forid$ForID <- unlist(lapply(strsplit(row.names(coefs.forid), "ForID"), function(x) {x[2]})) 
+tota <- merge(tota, coefs.forid, by="ForID") 
 ```
 
 ##### Double-check that these predictions make sense. 
@@ -181,12 +208,12 @@ testset <- tota[tota$ForID %in% "SBS_SBPS.SwB_Decid.31_80.2",]
 testset <- testset[order(testset$Pred_fit.dens.forid_tot, decreasing = F),]
 testset$PredxExposure <- testset$Pred_fit.dens.forid_tot * testset$Exposure
 testset$PredByExposure <- testset$Pred_fit.dens.forid_tot / testset$Exposure
-kable(testset[1:10,c("ForID", "PKEY", "Pred_fit.dens.forid_tot_pois", "Exposure", "Offset", "PredxExposure", "PredByExposure")], row.names=F, digits=3)
+kable(testset[1:10,c("ForID", "PKEY", "Pred_fit.dens.forid_tot_pois", "Exposure", "Offset", "PredxExposure", "PredByExposure", "exp.coef.fit.dens.forid_tot_pois..")], row.names=F, digits=3) 
 ```
 
 **NOTES**
 
-* Predictions are not the same for all polygons within a forest stand type. See the top two rows for an example. 
+* Initially, my predictions were not the same for all polygons within a forest stand type. After talking to Peter, I realized this is because my Offsets in the "newdata" for the predictions were not 0. It's important to set Offset=0, which then forces the predictions (on response scale) to be expected density per unit area (hectare) and under perfect detection. * For the sake of preserving the research I did when trying to trouble-shoot this, let's work through the logic of an offset in a Poisson model... 
 * Let's work through the logic of an offset in a Poisson model...
     * Count distributed as Poisson(exposure x expected density)
     * Linear predictor = log(exposure) + log(expected density)
@@ -196,37 +223,40 @@ kable(testset[1:10,c("ForID", "PKEY", "Pred_fit.dens.forid_tot_pois", "Exposure"
     * Expected count = exposure x expected density ?
     * Expected density =  Expected count / exposure 
     * So how do I estimate density if I don't have an offset??? e.g., trying to predict to unsampled locations. 
+        * PUT OFFSET=0 INTO DATA I'M PREDICTING TO 
 
 **MORE NOTES**
 
 * I emailed a bit with Peter Solymos on Jan 3, 2018. 
-    * You want the offsets to be 0 for prediction. I do not use the predict function, but `model.matrix()` to get the design matrix for the new data set and `X %*% coef()`.
+    * Peter prefers not to use the predict function. Instead he uses `model.matrix()` to get the design matrix for the new data set and `X %*% coef()`. I didn't get this working, so continued with `predict` 
+    * We also discussed that the coefs are group means, and therefore I don't even need to use 'predict' for this step. I double-checked that the predict means matched the coefs and they do. Yay. 
 
-``` {r}
-X <- model.matrix(fit.dens.forid_tot_pois)
-tota$mm.preds <- X %*% coef(fit.dens.forid_tot_pois)
-testset <- tota[tota$ForID %in% "SBS_SBPS.SwB_Decid.31_80.2",]
-testset <- testset[order(testset$Pred_fit.dens.forid_tot, decreasing = F),]
-testset$PredxExposure <- testset$Pred_fit.dens.forid_tot * testset$Exposure
-testset$PredByExposure <- testset$Pred_fit.dens.forid_tot / testset$Exposure
-kable(testset[1:10,c("ForID", "PKEY", "Pred_fit.dens.forid_tot_pois", "Exposure", "Offset", "PredxExposure", "PredByExposure", "mm.preds")], row.names=F, digits=3)
-
-```
 
 ### Plotting correspondance between Forest stand ranks and their average observed density (in sampled stands)
 
 ``` {r plot.foriddens.rank.corr, eval=F}
-tota$EstDensity <- tota$Pred_fit.dens.forid_tot / exp(tota$Offset) 
+tota$EstDensity <- tota$Pred_fit.dens.forid_tot_pois 
 
-ggplot(tota, aes(x=as.factor(Rank), y=EstDensity, group=as.factor(Rank), fill=as.factor(Rank))) + geom_boxplot() + xlab("Rank") + ylab("EstDensity")
-
-ggplot(tota, aes(x=as.factor(Rank), y=EstDensity, group=as.factor(Rank), col=as.factor(Rank), fill=as.factor(Rank))) + geom_violin() + myfacettheme + xlab("Rank") + ylab("EstDensity")
-
-```
-
+ggplot(tota, aes(x=as.factor(Rank), y=EstDensity, group=as.factor(Rank), fill=as.factor(Rank))) + geom_boxplot() + xlab("Matrix Stand Rank") + ylab("Bird Density (# pairs/ha)") + myfacettheme2 + guides(fill=FALSE) + scale_fill_manual(values=palrank) 
+ 
+ggplot(tota, aes(x=as.factor(Rank), y=EstDensity, group=as.factor(Rank), col=as.factor(Rank), fill=as.factor(Rank))) + geom_violin() + xlab("Matrix Stand Rank") + ylab("Bird Density (# pairs/ha)") + myfacettheme2 + guides(fill=FALSE) +  guides(col=FALSE) + scale_fill_manual(values=palrank) + scale_colour_manual(values=palrank) 
+``` 
 
 
-
+## Approach 2. Quantitatively analyze relationship between density (count with offset) and Rank 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+# Question 2: How does bird density relate to forest attributes?  
+ 
+ 
+ 
 
 
 
